# music-suite

./: .dockerignore  .ghci  .gitattributes  .gitignore  .gitmodules  .travis.yml  COPYING  Dockerfile  ExportJSON.plg  ExportJSON.plgx  LICENSE  Lilypond.cabal  Makefile  README.md  RemoveRests.hs  Setup.hs  TODO  TODO.md  TT.hs  cabal.project  cabal.project.freeze  cafe2.hs  ci.nix  default.nix  docker.nix  focus.hs  genMap.hs  hslinks.hs  ilist.hs  import.hs  intervals.hs  lilypond.cabal  music-articulation.cabal  music-docs.cabal  music-dynamics.cabal  music-parts.cabal  music-pitch-literal.cabal  music-pitch.cabal  music-score.cabal  music-sibelius.cabal  (+23 more)
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  haskell-ci.yml
data/: .gitignore  CarterChords.txt  instruments.csv  ly_big_score.ily  ly_big_score.ly  ly_inline_test1.ly  ly_inline_test2.ly  ly_score.ly  techniques.csv
doc-tools/doctester/: doctester.cabal
doc-tools/doctester/src/: Main.hs
doc-tools/hslinks/: .gitignore  Makefile  README.md  Setup.hs  Test.md  hslinks.cabal
doc-tools/hslinks/src/: hslinks.hs
doc-tools/transf/: .gitignore  Makefile  README.md  transf.cabal
doc-tools/transf/src/: Main.hs
doc-tools/transf/src/Text/: Transf.hs
doc-tools/transf/src/Text/Transf/: Process.hs
docs/: Makefile  README.md
docs-sphinx/: README.md  default.nix
docs-sphinx/nix/: devenv.nix  update-nixpkgs.sh
docs/js/: main.js
docs/logo/: logo.hs
docs/src/: About.md  Book.md  CheatSheet.md  Introduction.md  NoteVoiceScore.md  Operators.md  Tutorial.md  Usage.md  User-Guide.md
examples/: AnalysisDurations.hs  HarpStringTexture.hs  MenacingBass.hs  StudyForHarp.hs  TimeSignatures.hs  Voicing.hs  analysis.hs  analysis_durations.hs  annotatations.hs  annotations.hs  bartok.hs  behavior.hs  canon.hs  chopin.hs  chorale.hs  chords.hs  duo.hs  dynamics.hs  fugue1.hs  hello.hs  klangfarben.hs  mozart.hs  new.hs  part.hs  phrases.hs  piano1.hs  piano2.hs  piano3.hs  scheme.hs  simple.hs  sky.hs  streams.hs  test1.scm  test2.scm  time_signatures.hs  trio.hs  tuplet.hs  voices.hs
examples/pieces/: Exaudi.hs  Exaudi2.hs  Gui.hs  IDEAS.txt  Murail.hs  Piece 1.txt  Piece1.hs  Piece10.hs  Piece11.hs  Piece12.hs  Piece13.hs  Piece2.hs  Piece3.hs  Piece5.hs  Piece6.hs  Piece7.hs  Piece8.hs  Piece9.hs  TODO  Util.hs  oeis.hs  out.txt  thirdHarmony.hs
frontend/: README.md  music-suite-app-front.cabal  stack.yaml
frontend/app/: Main.hs
frontend/src/: Lib.hs
info/: API.hs  AdjunctionSpec.hs  Drawing.hs  INSTANCES  Inside.diff  Names.txt  NewTime.hs  PartAndPhraseViews.hs  RENAME  RemoveRests.hs  TTs.hs  Through2.hs  TimeTypes.hs  WIKIF  Writeup.md  design  design.hs  lens.hs  merge.hs  musVdiaTCs.txt  sketch.hs  tf.hs  update6.hs
info/RemoveRests/: RemoveRests.hs  RemoveRestsFD.hs
info/trans/: trans3.hs
info/update/: update5.hs  update6.hs
lib/: Workspace.hs
logo/: logo.hs
releases/: Notes.md
scripts/: GenerateExamples.hs  MakeBom.hs  format.sh  music-util  music-util.hs
scripts/stack/: default.stack.yaml
sketch/: API  API_CLASSES  CMN.hs  ChordAndVoiceEtc.hs  Graphical.hs  Laws.hs  Model.hs  MusicalSetTheory.hs  NewReactive.hs  Past.hs  Redesign.md  Schenkerian trees.txt  SemitonesEtc.hs  UnOfficialMusicXMLTestSuite.txt  UseMTL.hs  VoiceSep.txt  applic.hs  display.hs  escape.hs  partDefault.hs  reactive.hs  rtm.hs  synopsis.hs  synopsis2.hs
sketch/old/: CleanMusicTime.txt  HierachicalTS.hs  NTs.hs  TT.hs  TTs.hs  Through.hs  TimeTypes.hs  sonore.lisp
sketches/: AdjunctionSpec.hs  Aligned.hs  CleanMusicTime.txt  NewExport.hs  NewTTStuff.hs  Peels.hs  Prisms.md  ProsePickupPositionDurationEtc.txt  RENAME  Semantics.hs  SpanList.hs  TT3.hs  TTs2.hs  Through.hs  TimeTypes.hs  Writeup.md  imports.hs  musVdiaTCs.txt
sketches/old/: GeneralizeVoiceChordTypes.hs  PartAndPhraseViews.hs  Semantics.hs  Through2.hs  Writeup.md
sketches/trans/: README  trans2.hs
src/: About.md  Book.md  CheatSheet.md  Classes.md  Development.md  Main.hs  Makefile  New Guide.txt  Tutorial.md  TypeErrors.md  Usage.md  User-Guide.md  User-Guide2.md
src/Data/: Average.hs  Clipped.hs  FiniteSeq.hs  LabelTree.hs  PairMonad.hs  Substitute.hs
src/Development/: Design.md  Pitch.md  Sources.md  Tools.md  Trimming Behaviors.md  VersionBounds.md
src/Music/: Articulation.hs  Dynamics.hs  Lilypond.hs  MusicXml.hs  Parts.hs  Pitch.hs  Prelude.hs  Score.hs  Sibelius.hs  Time.hs
src/Tutorial/: About.md  Getting-Started.md  Usage.md
talks/: FARM2014Slides.md  Makefile  styles.css
talks/2014-FARM/: FARM2014Slides.md
talks/2015-GHMaster/: Sketch.md
templates/music-suite/: template.css
test/: .gitignore  Basic.hs  Laws.hs  Main.hs  Makefile  MusicXmlParser.hs  Patterns.hs  Regression.hs  UMTS.hs  articulation_all_accents.music  dynamics_constant.music  instances.hs  meta_clef1.music  meta_time_signature.music  meta_title.music  octaves.music  open-lilypond  originals_ref.sha  overlay_voices.music  simple_figure.music  special_harmonics.music  special_tremolo.music  stretch_single_note2.music  test.hs  tremolo.xml
test/extra-musicxml-tests/: TechniqueVsExprAndOtherText.sib  TechniqueVsExprAndOtherText.xml  TwoStavesKeySig.xml
test/golden/: articulation_all_separations.mid  meta_annotations.ly  meta_clef1.xml  misc_counterpoint.ly  octaves.mid  overlay_chords.xml  pitch_inv.xml  simple_figure.ly  simple_figure.mid  simple_figure.xml  simple_start_later.ly  simple_start_later.xml  single_note.mid  single_note.xml  special_harmonics.mid  special_text.xml  special_tremolo.xml  stretch_single_note3.mid  stretch_single_note3.xml  track_single.ly  voice_single.ly
test/legacy-music-files/: articulation_all_accents.music  articulation_all_separations.music  articulation_legato.music  articulation_portato.music  articulation_staccato.music  decl_style1.music  dynamics_constant.music  melody_chords.music  meta_annotations.music  meta_clef1.music  meta_composer.music  tests.hs  (+14 more)
tests/: Main.hs
tools/: music2ly.hs  music2midi.hs  music2musicxml.hs  music2pdf.hs  music2png.hs  music2svg.hs
util/: test.js
(+378 files in other folders)
