
name:                   lilypond
version:                1.6.2
author:                 Hans Hoglund
maintainer:             Hans Hoglund <hans@hanshoglund.se>
license:                BSD3
license-file:           COPYING
synopsis:               Bindings to Lilypond
category:               Music
tested-with:            GHC
build-type:             Simple
cabal-version:          >= 1.10

description:
    This package contains a terse Haskell representation of (a subset of) Lilypond
    expressions and a pretty-printer for such expressions. They can be used to generate
    musical notation.

source-repository head
    type:               git
    location:           git://github.com/music-suite/lilypond.git


library
    build-depends:      base                    >= 4 && < 5,
                        semigroups              >= 0.13.0.1 && < 1,
                        vector-space,
                        process,
                        data-default,
                        prettify,
                        music-pitch-literal     == 1.6.2,
                        music-dynamics-literal  == 1.6.2
    exposed-modules:    Music.Lilypond
                        Music.Lilypond.Pitch
                        Music.Lilypond.Dynamics
                        Music.Lilypond.Value
                        Music.Lilypond.IO
    hs-source-dirs:     src
    default-language:   Haskell2010
