
name:                   lilypond
version:                1.9.2
author:                 Hans Hoglund
maintainer:             Hans Hoglund <hans@hanshoglund.se>
license:                BSD3
license-file:           COPYING
synopsis:               Bindings to Lilypond
category:               Music
tested-with:            GHC
build-type:             Simple
cabal-version:          >= 1.10

description:
    This package contains a terse Haskell representation of (a subset of) Lilypond
    expressions and a pretty-printer for such expressions. They can be used to generate
    musical notation.

source-repository head
    type:               git
    location:           git://github.com/music-suite/lilypond.git


library
    build-depends:      base                    >= 4 && < 5,
                        semigroups              >= 0.13.0.1 && < 1,
                        vector-space            >= 0.10.2 && < 1,
                        process                 >= 1.2 && < 1.3,
                        data-default,
                        prettify,
                        music-pitch             == 1.9.2,
                        music-dynamics          == 1.9.2
    exposed-modules:    Data.Music.Lilypond
                        Data.Music.Lilypond.Pitch
                        Data.Music.Lilypond.Dynamics
                        Data.Music.Lilypond.Value
                        Data.Music.Lilypond.IO
    hs-source-dirs:     src
    default-language:   Haskell2010

test-suite "lilypond-tests"
    build-depends:      base                    >= 4 && < 5,
                        semigroups              >= 0.13.0.1 && < 1,
                        vector-space            >= 0.10.2 && < 1,
                        process                 >= 1.2 && < 1.3,
                        data-default,
                        prettify,
                        music-pitch             == 1.9.2,
                        music-dynamics          == 1.9.2,
                        lilypond
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    default-language:   Haskell2010
