
name:               music-articulation
version:            1.3.1
cabal-version:      >= 1.10
author:             Hans Hoglund
maintainer:         Hans Hoglund
license:            BSD3
license-file:       COPYING
synopsis:           Abstract representation of musical articulation.
category:           Music
tested-with:        GHC
build-type:         Simple

description: 
    Abstract representation of musical articulation (staccato, legato etc).
    
    This library is part of the Music Suite, see <http://musicsuite.github.com>.

source-repository head
  type:             git
  location:         git://github.com/hanshoglund/music-articulation.git
  
library                    
    build-depends: 
        base >= 4 && < 5,
        unix,
        time,
        random,
        semigroups,
        semigroupoids

    hs-source-dirs: src
    default-language: Haskell2010
    exposed-modules:
        Music.Articulation