
name:                   music-dynamics
version:                1.9.0
author:                 Hans Hoglund
maintainer:             Hans Hoglund
license:                BSD3
license-file:           COPYING
synopsis:               Abstract representation of musical dynamics.
category:               Music
tested-with:            GHC
build-type:             Simple
cabal-version:          >= 1.10

description:
    Abstract representation of musical dynamic levels.

    This library is part of the Music Suite, see <http://music-suite.github.io>.

source-repository head
  type:             git
  location:         git://github.com/music-suite/music-dynamics.git

library
    build-depends:      base                    >= 4        && < 5,
                        average                 >= 0.6.1    && < 1,
                        semigroups              >= 0.13.0.1 && < 1,
                        music-dynamics-literal  == 1.9.0
    exposed-modules:    Music.Dynamics
                        Music.Dynamics.Absolute
                        Music.Dynamics.Common
                        Music.Dynamics.Balance
    hs-source-dirs:     src
    default-language:   Haskell2010
