
name:                   music-parts
version:                1.6.2
author:                 Hans Hoglund
maintainer:             Hans Hoglund
license:                BSD3
license-file:           COPYING
synopsis:               To be written.
category:               Music
tested-with:            GHC
build-type:             Simple
cabal-version:          >= 1.10

description: 
    Abstract representation of musical parts and instruments.
    .
    This library is part of the Music Suite, see <http://music-suite.github.io>.

source-repository head
  type:                 git
  location:             git://github.com/music-suite/music-parts.git
  
library                    
    build-depends:      base                    >= 4 && < 5,
                        time,
                        random,
                        semigroups              >= 0.13.0.1 && < 1,
                        semigroupoids,
                        data-default,
                        roman-numerals
    exposed-modules:    Music.Parts
                        -- Music.Parts.Strings
                        -- Music.Parts.Woodwind
                        -- Music.Parts.Brass
                        -- Music.Parts.Percussion
                        -- Music.Parts.Rhythm
                        -- Music.Parts.Other
    hs-source-dirs:     src
    default-language:   Haskell2010
