
name:               music-pitch-literal
version:            1.2
cabal-version:      >= 1.2
author:             Hans Hoglund
maintainer:         Hans Hoglund
license:            BSD3
license-file:       COPYING
synopsis:           Overloaded pitch literals.
category:           Music
tested-with:        GHC
build-type:         Simple

description: 
    This package allow you to write the pitches of standard notation as expressions
    overloaded on result type. This works exactly like numeric literals.

    This library is part of the Haskell Music Suite, see <http://musicsuite.github.com>.

library                    
    build-depends: 
        base >= 4 && < 5
    hs-source-dirs: src
    exposed-modules:
        Music.Pitch.Literal
    