
name:               music-pitch-literal
version:            1.3.1
cabal-version:      >= 1.10
author:             Hans Hoglund
maintainer:         Hans Hoglund
license:            BSD3
license-file:       COPYING
synopsis:           Overloaded pitch literals.
category:           Music
tested-with:        GHC
build-type:         Simple

description: 
    This package allow you to write the pitches of standard notation as expressions
    overloaded on result type. This works exactly like numeric literals.

    This library is part of the Music Suite, see <http://musicsuite.github.com>.

source-repository head
  type:             git
  location:         git://github.com/hanshoglund/music-pitch-literal.git
  
library                    
    build-depends: 
        base >= 4 && < 5
    hs-source-dirs: src
    default-language: Haskell2010
    exposed-modules:
        Music.Pitch.Literal
    