
name:               music-pitch-literal
version:            1.6
cabal-version:      >= 1.10
author:             Hans Hoglund
maintainer:         Hans Hoglund
license:            BSD3
license-file:       COPYING
synopsis:           Overloaded pitch literals.
category:           Music
tested-with:        GHC
build-type:         Simple

description: 
    This package allow you to write the pitches of standard notation as expressions
    overloaded on result type. This works exactly like numeric literals.

    This library is part of the Music Suite, see <http://music-suite.github.io>.

source-repository head
  type:             git
  location:         git://github.com/music-suite/music-pitch-literal.git
  
library                    
    build-depends: 
        base                    >= 4 && < 5,
        semigroups
    hs-source-dirs: src
    default-language: Haskell2010
    exposed-modules:
        Data.Semigroup.Applicative
        Music.Pitch.Literal
        Music.Pitch.Literal.Pitch
        Music.Pitch.Literal.Interval
    