
name:                   music-pitch
version:                1.7.2
cabal-version:          >= 1.10
author:                 Hans Hoglund
maintainer:             Hans Hoglund
license:                BSD3
license-file:           COPYING
synopsis:               Musical pitch representation.
category:               Music
tested-with:            GHC
build-type:             Simple

description: 
    This package provides various representations of musical pitch.
    .
    This library is part of the Music Suite, see
    <http://music-suite.github.io>.

source-repository head
  type:                 git
  location:             git://github.com/music-suite/music-pitch.git
  
library                    
    build-depends:      base                    >= 4 && < 5,
                        time,
                        random,
                        containers,
                        semigroups              >= 0.13.0.1 && < 1,
                        semigroupoids,
                        music-pitch-literal     == 1.7.2,
                        vector-space            >= 0.8.7 && < 0.9,
                        vector-space-points     >= 0.2 && < 0.3,
                        nats,
                        type-unary              >= 0.2.16 && < 1.0
                        -- type-level              >= 0.2.4 && < 3.0
    exposed-modules:    Music.Pitch
                        Music.Pitch.Absolute
                        Music.Pitch.Equal
                        Music.Pitch.Common
                        Music.Pitch.Common.Interval
                        Music.Pitch.Common.Pitch
                        Music.Pitch.Common.Semitones
                        Music.Pitch.Common.Spell
                        Music.Pitch.Common.Harmony
                        Music.Pitch.StaffLines
                        Music.Pitch.Clef
                        Music.Pitch.Tokawa
                        Music.Pitch.Intonation
    hs-source-dirs:     src
    default-language:   Haskell2010
