
name:                   music-pitch
version:                1.9.0
cabal-version:          >= 1.10
author:                 Hans Hoglund
maintainer:             Hans Hoglund
license:                BSD3
license-file:           COPYING
synopsis:               Musical pitch representation.
category:               Music
tested-with:            GHC
build-type:             Simple

description: 
    This package provides various representations of musical pitch.
    .
    This library is part of the Music Suite, see
    <http://music-suite.github.io>.

source-repository head
  type:                 git
  location:             git://github.com/music-suite/music-pitch.git
  
library                    
    build-depends:      base                    >= 4        && < 5,
                        containers,
                        lens                    >= 4.11     && < 5,
                        semigroups              >= 0.13.0.1 && < 1,
                        music-pitch-literal     == 1.9.0,
                        data-interval           >= 1.0.0    && < 2,
                        vector-space            >= 0.10.2   && < 1,
                        vector-space-points     >= 0.2      && < 1,
                        nats,
                        positive                >= 0.4      && < 1,
                        type-unary              >= 0.2.16   && < 1.0,
                        aeson                   >= 0.7.0.6  && < 1
    exposed-modules:    Music.Pitch
                        Music.Pitch.Absolute
                        Music.Pitch.Equal
                        Music.Pitch.Common
                        Music.Pitch.Common.Types
                        Music.Pitch.Common.Quality
                        Music.Pitch.Common.Number
                        Music.Pitch.Common.Interval
                        Music.Pitch.Common.Pitch
                        Music.Pitch.Common.Semitones
                        Music.Pitch.Common.Spell
                        Music.Pitch.Common.Harmony
                        Music.Pitch.Common.Names
                        Music.Pitch.Ambitus
                        Music.Pitch.Scale
                        Music.Pitch.Clef
                        Music.Pitch.Intonation
    other-modules:      Music.Pitch.Tokawa
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: StandaloneDeriving,
                        TypeFamilies,
                        TypeOperators,
                        GeneralizedNewtypeDeriving,
                        MultiParamTypeClasses,
                        DeriveDataTypeable,
                        ViewPatterns,
                        OverloadedStrings
    ghc-options:        -fno-warn-typed-holes
